<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <ImageView
        android:id="@+id/logo_left"
        android:layout_width="65dip"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:src="@drawable/schriftzug" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@id/logo_left">

        <LinearLayout
            android:id="@+id/task_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/overview_picture"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/alexandria" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="30dp"
                android:layout_weight="1.1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/alex_task_1"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/alexandria_task_1" />

                <TextView
                    android:id="@+id/alex_task_2"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/alexandria_task_2" />

                <TextView
                    android:id="@+id/alex_task_3"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/alexandria_task_3" />

                <RadioGroup
                    android:id="@+id/radioAlexandria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dip"
                    android:layout_marginTop="10dip"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio2years"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/alexandria_radio2years" />

                    <RadioButton
                        android:id="@+id/radio5years"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alexandria_radio5years" />

                    <RadioButton
                        android:id="@+id/radio20years"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alexandria_radio20years" />

                    <RadioButton
                        android:id="@+id/radio50years"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alexandria_radio50years" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:enabled="false"
            android:text="@string/button_OK" />

    </RelativeLayout>

</RelativeLayout>
