<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <ImageView
        android:id="@+id/logo_left"
        android:layout_width="65dip"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:src="@drawable/schriftzug" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@id/logo_left">

        <LinearLayout
            android:id="@+id/task_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/overview_picture"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/sextant2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="70dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/alex_task_1"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/sextant_task" />

                <RadioGroup
                    android:id="@+id/radioAngles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dip"
                    android:layout_marginTop="30dip"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio19degrees"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sextant_19degrees" />

                    <RadioButton
                        android:id="@+id/radio22degrees"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:text="@string/sextant_22degrees" />

                    <RadioButton
                        android:id="@+id/radio25degrees"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:text="@string/sextant_25degrees" />

                    <RadioButton
                        android:id="@+id/radio28degrees"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:text="@string/sextant_28degrees" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:enabled="false"
            android:text="@string/button_OK" />

    </RelativeLayout>

</RelativeLayout>
