<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground">

    <ImageView
        android:id="@+id/logo_left"
        android:layout_width="65dip"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:src="@drawable/schriftzug" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@id/logo_left">

        <com.skronawi.dlr_school_lab.navigation_english.tasks.TrilaterationCanvasView
            android:id="@+id/canvas"
            android:layout_width="600dip"
            android:layout_height="450dip"
            android:layout_centerVertical="true"
            android:textColor="#FFFFFF" />

        <TableLayout
            android:id="@+id/answer_table"
            android:layout_width="300dip"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="100dip"
            android:layout_toRightOf="@id/canvas">

            <TableRow>

                <TextView
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="180dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginRight="10dip"
                    android:text="@string/answers_alexandria" />

                <TextView
                    android:id="@+id/alexandria_meters"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:text="@string/answers_portolan" />

                <TextView
                    android:id="@+id/portolan_meters"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:text="@string/answers_sextant" />

                <TextView
                    android:id="@+id/sextant_meters"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:text="@string/answers_heightestimation" />

                <TextView
                    android:id="@+id/height_estimate_meters"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/coord_table"
            android:layout_width="230dip"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer_table"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dip"
            android:layout_marginTop="50dip"
            android:layout_toRightOf="@id/canvas">

            <TableRow android:layout_width="wrap_content">

                <TextView
                    android:id="@+id/lat_label"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="90dip"
                    android:layout_height="wrap_content"
                    android:text="@string/width" />

                <TextView
                    android:id="@+id/lat_input"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="140dip"
                    android:layout_height="wrap_content"
                    android:text="-" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lon_label"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_height="wrap_content"
                    android:text="@string/length" />

                <TextView
                    android:id="@+id/lon_input"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_height="wrap_content"
                    android:text="-" />
            </TableRow>
        </TableLayout>

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:enabled="false"
            android:text="@string/button_OK" />

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_toLeftOf="@id/buttonOk"
            android:text="@string/button_GoBack" />

    </RelativeLayout>
</RelativeLayout>